# PerfForge

./: README.md  pyproject.toml
src/hotpath/: analyzer.py  cli.py  models.py  report.py  rules.py
