[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotpath"
version = "0.1.0"
description = "A PyTorch GPU performance linter that finds expensive anti-patterns."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "KernelPilot" }]
license = { text = "MIT" }
keywords = ["pytorch", "cuda", "gpu", "performance", "profiler", "triton"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
hotpath = "hotpath.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
